FIX: horizontal overflow

--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -3,6 +3,7 @@
 #app {
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
 }
